--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <div id="finish"></div>
       </div>
     </div>
-    <script src="TEST.js" defer></script>
+    <script src="game.js" defer></script>
   </body>
 </html>
